test/valid/double-func.js
function f(x) { return x()(); };
f(function(){return function(){return 0; }; });
