test/invalid/infinite2.js
var f = function(x) { return function(z) { return f(x); }; };
f
